# distributed-transolver3

./: .gitignore  CLAUDE.md  CRITICAL_ISSUES.md  LICENSE  README.md  SPEC.md  TODO.md  WORKFLOW.md  databricks.yml  demo.cast  pyproject.toml
Industrial-Scale-Benchmarks/: exp_drivaer_ml_distributed.py  train_eval.py
SPECS/: COST_ESTIMATE.md  CRITICAL_ISSUES.md  DIFFERENTIATORS.md  DISTRIBUTED.md  DISTRIBUTED_ARCHITECTURE.md  GAP2.md  GAPS.md  MIGRATION_V1_TO_V3.md  MLOPS.md  REPRODUCIBILITY.md  SCALED_DOT_PRODUCT_ATTENTION.md  VALUEADDED.md
benchmarks/: gpu_memory_benchmark.py  test_sharded_distributed.py
experiments/: COMPARE_v1v3.md  compare_v1_v3_drivaer.py  compare_v1_v3_real_drivaer.py  render_pressure_heatmaps.py
resources/: convert_vtp_job.yml  distributed_test_job.yml  download_convert_job.yml  download_raw_job.yml  gpu_benchmark_job.yml  inspect_data_job.yml  serving_endpoint.yml  test_mlflow_auth_job.yml  test_register_deploy_job.yml  test_register_job.yml  training_workflow.yml
scripts/: convert_vtp_to_npz.py  convert_vtp_to_npz_batch.py  deploy_endpoint.py  download_convert_vtp.py  download_drivaer_raw.py  generate_split.py  inspect_data.py  list_unconverted_runs.py  preprocess.py  record_demo.py  register_model.py  reproduce_run.py  test_mlflow_auth.py  test_register.py
skills/: transolver-analyze.md  transolver-data.md  transolver-deploy.md  transolver-run.md
tests/: test_attention.py  test_benchmarking.py  test_common.py  test_convert_vtp.py  test_data_catalog.py  test_databricks_training.py  test_distributed.py  test_evaluate.py  test_generate_split.py  test_mlflow_utils.py  test_model.py  test_monitoring.py  test_profiling.py  test_register_model.py  test_serving.py  test_synced_sampler.py  test_training.py  test_transolver3.py
transolver3/: __init__.py  amortized_training.py  common.py  data_catalog.py  databricks_training.py  distributed.py  inference.py  mlflow_utils.py  model.py  monitoring.py  normalizer.py  physics_attention_v3.py  profiling.py  samplers.py  serving.py  transolver3_block.py
(+4 files in other folders)
