[project]
name = "transolver3"
version = "0.1.0"
description = "Transolver-3: Scaling Transformer Solvers to Industrial-Scale Geometries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "einops>=0.7",
    "timm>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
benchmark = [
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transolver3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
