[project]
name = "transolver3"
version = "0.1.0"
description = "Transolver-3: Scaling Transformer Solvers to Industrial-Scale Geometries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "einops>=0.7",
    "timm>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
benchmark = [
    "matplotlib>=3.7",
]
databricks = [
    "pyspark>=3.5",
    "delta-spark>=3.0",
    "mlflow>=2.10",
    "databricks-sdk>=0.20",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transolver3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
per-file-ignores = {"benchmarks/*" = ["E402"], "Industrial-Scale-Benchmarks/*" = ["E402"]}

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# PyTorch stubs are incomplete — these fire on valid torch code
no-matching-overload = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
unsupported-operator = "ignore"
unresolved-attribute = "ignore"
call-non-callable = "ignore"
invalid-method-override = "ignore"
# pyspark and dataset.drivaer_ml use runtime sys.path manipulation
unresolved-import = "ignore"
